--- a/stream-one.html
+++ b/stream-one.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Hello World</title>
 </head>
 <body>
@@ -15,6 +16,35 @@
         </ul>
     </nav>
     <h1>Stream One</h1>
-    <p>This project was written in GitPod.</p>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" alt="HTML5 Logo">
+            <h2>HTML5</h2>
+        </a>
+    </div>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1200px-CSS3_logo_and_wordmark.svg.png" alt="CSS3 Logo">
+            <h2>CSS3</h2>
+        </a>
+    </div>
+    <div class="card">
+        <a href="https://www.gitpod.io/" target="_blank">
+            <img src="https://spectrum.imgix.net/communities/2419cfa5-cadc-4d4b-92a4-bf550a5577b8/68733995-e440-48c8-9b55-47a2c6bdbd30-gitpod-marke.png?w=256&h=256&dpr=2&auto=compress&expires=1617148800000&ixlib=js-1.3.0&s=c23e45d9ed7c82c7d3d811edffa4e001" alt="GitPod Logo">
+            <h2>GitPod</h2>
+        </a>
+    </div>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/Git" target="_blank">
+            <img src="https://avatars.githubusercontent.com/u/18133?s=200&v=4" alt="Git Logo">
+            <h2>Git</h2>
+        </a>
+    </div>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub Logo">
+            <h2>GitHub</h2>
+        </a>
+    </div>
 </body>
 </html>
